--- a/index.html
+++ b/index.html
@@ -37,7 +37,54 @@
     <main>
         <section class="about">
             <h3 class="section-title">About Me</h3>
-            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <p class="about-description section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-content">
+                <div class="about-info">
+                    <p class="info-title">Name:</p>
+                    <h4 class="info-description">Mary Hardy</h4>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Email:</p>
+                    <h4 class="info-description">info@gmail.com</h4>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Date of birth:</p>
+                    <h4 class="info-description">11 November 1987</h4>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">From:</p>
+                    <h4 class="info-description">Los Angeles, USA</h4>
+                </div>
+            </div>
+        </section>
+        <section class="skills">
+            <h3 class="section-title">What I Do</h3>
+            <p class="skills-description section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skills-content">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="JavaScript">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="React js">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="Node JS">
+                    <h3 class="skill-title">Node.js</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="MongoDB">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
         </section>
     </main>
     <footer></footer>
