--- a/index.html
+++ b/index.html
@@ -85,6 +85,51 @@
         </section>
         <section class="resume">
             <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-content">
+                <div class="education-list-items">
+                    <h3 class="resume-content-title">My Education</h3>
+                    <div class="education-list-item">
+                        <h4>Master in Computer Engineering</h4>
+                        <h5>Harvard University / 2015 - 2017</h5>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="education-list-item">
+                        <h4>Master in Computer Engineering</h4>
+                        <h5>Harvard University / 2015 - 2017</h5>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="education-list-item">
+                        <h4>Master in Computer Engineering</h4>
+                        <h5>Harvard University / 2015 - 2017</h5>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="experience-list-items">
+                    <h3 class="resume-content-title">My Experience</h3>
+                    <div class="experience-list-item">
+                        <h4>Sr. Font End Developer</h4>
+                        <h5>Apple Inc / 2020 - Current</h5>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="experience-list-item">
+                        <h4>Jr. Font End Developer</h4>
+                        <h5>Dribbble Inc / 2018 - 2022</h5>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="experience-list-item">
+                        <h4>HTML Developer</h4>
+                        <h5>Adobe Inc / 2017 - 2018</h5>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="download">
+                <button class="btn-primary">Download CV</button>
+            </div>
         </section>
     </main>
     <footer></footer>
