--- a/index.html
+++ b/index.html
@@ -132,6 +132,27 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-item">
+            <h3 class="section-title footer-title">Lets Connect</h3>
+            <p class="section-description footer-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="social-links">
+                <a href="http://" target="_blank" rel="noopener noreferrer"><img src="images/icons/facebook.png" alt=""></a>
+                <a href="http://" target="_blank" rel="noopener noreferrer"><img src="images/icons/twitter.png" alt=""></a>
+                <a href="http://" target="_blank" rel="noopener noreferrer"><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-item">
+            <h3 class="section-title footer-title">Let’s Message me</h3>
+            <div class="footer-form">
+                <form action="">
+                    <input type="text" name="name" id="name" placeholder="Your Name">
+                    <input type="email" name="email" id="email" placeholder="Your Email">
+                    <textarea name="msg" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                    <input type="submit" value="Submit" class="btn-primary">
+                </form>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
